Working version with Minio and Postgres.

--- a/env.yaml
+++ b/env.yaml
@@ -1,7 +1,8 @@
 name: mlflow_regression
 
 channels:
-    - conda-forge
+  - main
+  - conda-forge
 
 dependencies:
   - seaborn
@@ -11,4 +12,5 @@ dependencies:
   - mlflow
   - jupyterlab
   - sagemaker-python-sdk
+  - psycopg2
   - pip
